<resources>
    <string name="app_name">Mi Cartera App</string>

    <string name="tv1">Pantalla de inicio</string>
    <string name="btn1">+ Ingreso</string>
    <string name="btn2">- Gasto</string>
    <string name="btn3">Movimientos</string>
    <string name="tv2">Balance Mensual + remanentes</string>
    <string name="tv3">aqui va la fecha</string>
    <string name="tv4">Ingreso:</string>
    <string name="tv5">Saldo anterior:</string>
    <string name="tv6">Gasto:</string>
    <string name="tv7">Saldo actual:</string>
    <string name="edtn1">0.00</string>
    <string name="edtn2">0.00</string>
    <string name="edtn3">0.00</string>
    <string name="edtn4">0.00</string>



    <string name="tv8"> Agregar Ingresos</string>
    <string name="edtn_1_i">0</string>
    <string name="edt_1_i">Escriba una descripcion brebe</string>
    <string name="btnInicio">Inicio</string>

    <string name="tv9">Agregar Gastos</string>
    <string name="edtn_1_g">0</string>



</resources>